# advent-of-code

./: .gitignore  README.md  aoc.cabal  flake.nix  solve
2015/: day2.hs  day4.hs
2016/: day2.hs
2017/: day2.hs
2018/: day13.hs  day14.hs  day15.hs  day3.hs  day4.hs  day7.hs  day8.hs
2019/: Intcode.hs  day5.hs  day6.hs  day9.hs
2020/: day1.hs  day10.hs  day12.hs  day13.hs  day14.hs  day17.hs  day18.hs  day19.hs  day2.hs  day20.hs  day21.hs  day22.hs  day5.hs  day7.hs  day8.hs  day9.hs
2021/: day11.hs  day13.hs  day14.hs  day15.hs  day17.hs  day3.hs  day4.hs  day6.hs  day8.hs  day9.hs
clojure/: deps.edn
clojure/src/: main.clj
clojure/src/util/: collection.clj  hex.clj  int.clj  map.clj  math.clj  vec2d.clj
clojure/src/y2015/: day1.clj  day5.clj  day6.clj  day7.clj  day8.clj
clojure/src/y2022/: day1.clj
clojure/src/y2023/: day1.clj  day10.clj  day2.clj  day3.clj  day4.clj  day5.clj  day6.clj  day7.clj  day8.clj  day9.clj
haskell/: aoc.cabal
haskell/2015/: day1.hs  day3.hs
haskell/2016/: day1.hs  day3.hs  day4.hs
haskell/2017/: day1.hs
haskell/2018/: day1.hs  day10.hs  day11.hs  day12.hs  day2.hs  day5.hs  day6.hs  day9.hs
haskell/2019/: day1.hs  day10.hs  day2.hs  day3.hs  day4.hs  day7.hs  day8.hs
haskell/2020/: day11.hs  day15.hs  day16.hs  day19.hs  day2.hs  day3.hs  day4.hs  day6.hs
haskell/2021/: day1.hs  day10.hs  day16.hs  day17.hs  day2.hs  day5.hs  day7.hs  day9.hs
haskell/src/: Main.hs
haskell/src/Y2015/: Day1.hs  Day2.hs  Day3.hs  Day4.hs
haskell/src/Y2016/: Day1.hs  Day2.hs  Day3.hs  Day4.hs
haskell/src/Y2017/: Day1.hs  Day2.hs
haskell/src/Y2018/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
haskell/src/Y2019/: Day1.hs  Day10.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Intcode.hs
haskell/src/Y2020/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
haskell/src/Y2021/: Day1.hs  Day10.hs  Day11.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
rust/: Cargo.toml
rust/src/: main.rs
rust/src/util/: dijkstra.rs  grid.rs  mod.rs  nom.rs  point.rs  shape.rs  string.rs  tree.rs  util.rs  vector.rs
rust/src/util/bits/: i32.rs  mod.rs  u16.rs
rust/src/y2015/: day1.rs  day2.rs
rust/src/y2022/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day2.rs  day21.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
