cabal-version:      3.0
name:               aoc
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

executable haskell
    import:           warnings
    build-depends:    base ^>=4.16.4.0
    default-language: GHC2021
    hs-source-dirs:   src
    main-is:          Main.hs
    build-depends:    base,
                      array,
                      attoparsec,
                      base16-bytestring,
                      bytestring,
                      containers,
                      cryptohash-md5,
                      monad-loops,
                      numeric-quest,
                      pqueue,
                      regex-posix,
                      safe,
                      split,
                      text,
                      time,
                      Unique,
                      vector,
                      word8
    other-modules:    Y2015.Day1,
                      Y2015.Day2,
                      Y2015.Day3,
                      Y2015.Day4,
                      Y2016.Day1,
                      Y2016.Day2,
                      Y2016.Day3,
                      Y2016.Day4,
                      Y2017.Day1,
                      Y2017.Day2,
                      Y2018.Day1,
                      Y2018.Day2,
                      Y2018.Day3,
                      Y2018.Day4,
                      Y2018.Day5,
                      Y2018.Day6,
                      Y2018.Day7,
                      Y2018.Day8,
                      Y2018.Day9,
                      Y2018.Day10,
                      Y2018.Day11,
                      Y2018.Day12,
                      Y2018.Day13,
                      Y2018.Day14,
                      Y2018.Day15,
                      Y2019.Intcode,
                      Y2019.Day1,
                      Y2019.Day2,
                      Y2019.Day3,
                      Y2019.Day4,
                      Y2019.Day5,
                      Y2019.Day6,
                      Y2019.Day7,
                      Y2019.Day8,
                      Y2019.Day9,
                      Y2019.Day10,
                      Y2020.Day1,
                      Y2020.Day2,
                      Y2020.Day3,
                      Y2020.Day4,
                      Y2020.Day5,
                      Y2020.Day6,
                      Y2020.Day7,
                      Y2020.Day8,
                      Y2020.Day9,
                      Y2020.Day10,
                      Y2020.Day11,
                      Y2020.Day12,
                      Y2020.Day13,
                      Y2020.Day14,
                      Y2020.Day15,
                      Y2020.Day16,
                      Y2020.Day17,
                      Y2020.Day18,
                      Y2020.Day19,
                      Y2020.Day20,
                      Y2020.Day21,
                      Y2020.Day22,
                      Y2021.Day1,
                      Y2021.Day2,
                      Y2021.Day3,
                      Y2021.Day4,
                      Y2021.Day5,
                      Y2021.Day6,
                      Y2021.Day7,
                      Y2021.Day8,
                      Y2021.Day9,
                      Y2021.Day10,
                      Y2021.Day11,
                      Y2021.Day13,
                      Y2021.Day14,
                      Y2021.Day15,
                      Y2021.Day16,
                      Y2021.Day17
